; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_patch.c_git_patch_from_diff.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_patch.c_git_patch_from_diff.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { {}* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @git_patch_from_diff(i32** %0, %struct.TYPE_4__* %1, i64 %2) #0 {
  %4 = alloca i32**, align 8
  %5 = alloca %struct.TYPE_4__*, align 8
  %6 = alloca i64, align 8
  store i32** %0, i32*** %4, align 8
  store %struct.TYPE_4__* %1, %struct.TYPE_4__** %5, align 8
  store i64 %2, i64* %6, align 8
  %7 = load i32**, i32*** %4, align 8
  %8 = icmp ne i32** %7, null
  br i1 %8, label %9, label %18

9:                                                ; preds = %3
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %11 = icmp ne %struct.TYPE_4__* %10, null
  br i1 %11, label %12, label %18

12:                                               ; preds = %9
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 0
  %15 = bitcast {}** %14 to i32 (i32**, %struct.TYPE_4__*, i64)**
  %16 = load i32 (i32**, %struct.TYPE_4__*, i64)*, i32 (i32**, %struct.TYPE_4__*, i64)** %15, align 8
  %17 = icmp ne i32 (i32**, %struct.TYPE_4__*, i64)* %16, null
  br label %18

18:                                               ; preds = %12, %9, %3
  %19 = phi i1 [ false, %9 ], [ false, %3 ], [ %17, %12 ]
  %20 = zext i1 %19 to i32
  %21 = call i32 @assert(i32 %20)
  %22 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %23 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %22, i32 0, i32 0
  %24 = bitcast {}** %23 to i32 (i32**, %struct.TYPE_4__*, i64)**
  %25 = load i32 (i32**, %struct.TYPE_4__*, i64)*, i32 (i32**, %struct.TYPE_4__*, i64)** %24, align 8
  %26 = load i32**, i32*** %4, align 8
  %27 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %28 = load i64, i64* %6, align 8
  %29 = call i32 %25(i32** %26, %struct.TYPE_4__* %27, i64 %28)
  ret i32 %29
}

declare dso_local i32 @assert(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
